Fix dark mode projects card font color

--- a/css/projects.css
+++ b/css/projects.css
@@ -13,6 +13,7 @@ project-card {
 	margin: 20px 0;
 	border: 2px inset gray;
 	background: var(--accent);
+	color: var(--paper);
 	/*max-width: 300px;*/
 }
 
